--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install tox tox-gh-actions
+        pip install grako tox tox-gh-actions
 
     - name: Test with tox
       run: tox
